working with a few tweaks here and there

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,12 +3,13 @@ name = "vib"
 version = "0.1.0"
 edition = "2021"
 [dependencies]
-gtk = "*"
-webkit2gtk = "*"
+gtk = "0.18.1"
+#gtk4 = "0.9.2"
 reqwest = { version = "0.11", features = ["blocking", "json"] }
 tokio = { version = "1", features = ["full"] }
 cssparser = "0.26"
-gdk = "*"
 serde = { version = "1", features = ["derive"] }
-glib = "0.18"
 regex = "1.11.0"
+webkit2gtk = "*"
+gdk = "0.18.0"
+glib = "0.20.4"
